<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_red_dark"
    android:padding="@dimen/menuPadding"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuTitleString"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menuTitleTextSize"
        android:id="@+id/titleText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/menuButtonPadding" />

    <Button
        android:text="@string/menuButtonTextInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructionButton"
        android:background="@drawable/menuutton"
        android:padding="@dimen/menuButtonPadding"
        android:layout_margin="@dimen/menuButtonMargin"
        android:textSize="@dimen/textSizeMenuButton"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:text="@string/menuButtonTextNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menuutton"
        android:padding="@dimen/menuButtonPadding"
        android:layout_margin="@dimen/menuButtonMargin"
        android:id="@+id/newGame"
        android:textSize="@dimen/textSizeMenuButton"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:text="@string/menuButtonTextContinueGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menuutton"
        android:padding="@dimen/menuButtonPadding"
        android:layout_margin="@dimen/menuButtonMargin"
        android:id="@+id/continueGame"
        android:visibility="gone"
        android:textSize="@dimen/textSizeMenuButton"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:text="@string/menuButtonTextAboutGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menuutton"
        android:padding="@dimen/menuButtonPadding"
        android:layout_margin="@dimen/menuButtonMargin"
        android:textSize="@dimen/textSizeMenuButton"
        android:id="@+id/aboutButton"
        android:textColor="@android:color/holo_red_dark" />

</LinearLayout>