<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.deansponholz.poke_match.GameplayFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickTotal"
            android:textSize="@dimen/textSizeMenuButton"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/clickTotalTextView" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainMenu"
            android:background="@drawable/gamebutton"
            android:text="@string/mainMenuGame"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/menuButtonMargin"
            android:paddingLeft="@dimen/tileMargin"
            android:paddingRight="@dimen/tileMargin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gamebutton"
            android:text="@string/restartGameString"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:id="@+id/restart"
            android:layout_margin="@dimen/menuButtonMargin"
            android:paddingLeft="@dimen/tileMargin"
            android:paddingRight="@dimen/tilePadding" />


    </LinearLayout>

</LinearLayout>